# vm-riscv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
src/: ecall.c  ecall.h  exec.c  exec.h  instruction.c  instruction.h  main.c  vm.c  vm.h
src/dispatcher/: root.c  root.h
src/exec/: i.c  i.h  m.c  m.h
src/extensions/ecall/: exec.c  exec.h
src/extensions/i/: exec.c  exec.h
src/extensions/m/: exec.c  exec.h
src/extensions/zicsr/: exec.c  exec.h
src/modules/ecall/: exec.c  exec.h
src/modules/i/: exec.c  exec.h
src/modules/m/: exec.c  exec.h
src/modules/zicsr/: exec.c  exec.h
src/utils/: mmioMap.c  mmioMap.h
src/vm/: machine.c  machine.h
src/vm/cpu/dispatcher/: branch.c  branch.h  compressed.c  compressed.h  load.c  load.h  op.c  op.h  opimm.c  opimm.h  root.c  root.h  store.c  store.h  system.c  system.h
src/vm/cpu/extensions/c/: exec.c  exec.h
src/vm/cpu/extensions/ecall/: exec.c  exec.h
src/vm/cpu/extensions/i/: exec.c  exec.h
src/vm/cpu/extensions/m/: exec.h
src/vm/cpu/extensions/system/: exec.c  exec.h
src/vm/cpu/extensions/zicsr/: exec.c  exec.h
src/vm/cpu/hart/: privileged.c  privileged.h  unprivileged.c  unprivileged.h
src/vm/cpu/hart/privileged/: types.h
src/vm/cpu/hart/unprivileged/: types.h
src/vm/devices/: mmio.c  mmio.h
src/vm/devices/clint/: handler.c  handler.h  init.c  init.h
src/vm/devices/uart/: console.c  console.h  handler.c  handler.h  init.c  init.h
src/vm/hart/: privileged.c  privileged.h  unprivileged.c  unprivileged.h
src/vm/hart/privileged/: inst.h
src/vm/hart/unprivileged/: inst.h
src/vm/memory/: access.c  access.h  memory.c  memory.h  mmio.c  ram.c  ram.h  types.h
src/vm/privileged/: inst.h  vm.c  vm.h
src/vm/spec/: inst.h  vm.c  vm.h
tests/: CMakeLists.txt  test_addi.c  test_auipc.c  test_beq.c  test_bge.c  test_bgeu.c  test_blt.c  test_bltu.c  test_bne.c  test_branch.c  test_i.c  test_jal.c  test_jalr.c  test_jump.c  test_load.c  test_lui.c  test_m.c  test_map.c  test_op.c  test_op_imm.c  test_store_and_load.c  test_utils.h
